# code-protonbound

./: .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  README.md  SECURITY.md  SECURITY_MODEL.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/protonbound/: __init__.py  __main__.py  config.py  inspector.py  mail.py  scope.py  server.py  smtp.py
tests/: test_client.py  test_config.py  test_mail_parsing.py  test_scope.py  test_smtp.py  test_tool_surface.py
workspaces/: .gitignore  example-clients.yaml
