[project]
name = "protonbound"
version = "0.1.0"
description = "A lightweight MCP server exposing a scoped, read-and-draft-only view into Proton Mail via Proton Bridge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "keyring>=24",
    "markdownify>=0.13",
]

[project.scripts]
protonbound = "protonbound.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protonbound"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 95

[tool.ruff.lint]
# Conservative, mostly auto-fixable set. `BLE` (blind-except) is enabled because the code
# already carries `# noqa: BLE001` where a broad except is deliberate.
select = ["E", "F", "I", "UP", "BLE"]
ignore = ["E501"]  # line length is enforced by the formatter target above, not as a hard error
